--- a/tictactoelab/MainWindow.xaml
+++ b/tictactoelab/MainWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="tictactoelab.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:tictactoelab"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Крестики нолики" Height="350" Width="400">
     <Grid>
-        
+        <!-- Вот этот Label -->
+        <Label Content="Котельникова Наталья Ильинична" 
+               HorizontalAlignment="Center" 
+               VerticalAlignment="Center" 
+               FontSize="20"/>
     </Grid>
 </Window>
